Fix bug/interaction with link behind invisible footer element

--- a/editors-frontend/src/index.css
+++ b/editors-frontend/src/index.css
@@ -110,6 +110,7 @@ footer {
 	display: flex;
 	align-items: end;
 	justify-content: end;
+	pointer-events: none;
 }
 
 a {
@@ -122,6 +123,7 @@ nav a,
 footer a {
 	color: white;
 	background-color: transparent;
+	pointer-events: auto;
 }
 
 footer a {
