--- a/readers-frontend/src/index.css
+++ b/readers-frontend/src/index.css
@@ -104,6 +104,7 @@ footer {
 	display: flex;
 	align-items: end;
 	justify-content: end;
+	pointer-events: none;
 }
 
 a {
@@ -116,6 +117,7 @@ nav a,
 footer a {
 	color: white;
 	background-color: transparent;
+	pointer-events: auto;
 }
 
 footer a {
